@@ -21,6 +21,7 @@ src/vpn-properties/nm-vpn-properties.glade
 src/vpn-password-dialog.c
 src/vpn-password-dialog.h
 src/wireless-dialog.c
+src/wireless-security/eap-method-tls.c
 src/wireless-security/eap-method-ttls.c
 src/wireless-security/wireless-security.c
 
