@@ -1,5 +1,13 @@
 2007-11-08  Dan Williams  <dcbw@redhat.com>
 
+	* src/wireless-security/eap-method-tls.c
+	  src/wireless-security/eap-method-ttls.c
+	  po/POTFILES.in
+		- (eap_method_ttls_new, setup_filepicker, eap_method_tls_new): set
+			filepicker titles
+
+2007-11-08  Dan Williams  <dcbw@redhat.com>
+
 	* src/wireless-security/eap-method.h
 	  src/wireless-security/eap-method.c
 		- (eap_method_default_file_chooser_filter_new): new function; default
